--- a/login.php.html
+++ b/login.php.html
@@ -130,7 +130,7 @@
   <br><br><br>
 <div id="paid">
     <!-- Paid users table -->
-    <h2> 1.Paid Users </h2>
+    <h2>____1.Paid Users____</h2>
     <table>
         <thead>
         <tr>
@@ -148,7 +148,7 @@
 </div><br><br><br><br>
 <div id="unpaid">
     <!-- Unpaid users table -->
-    <h2> 2.Unpaid Users </h2>
+    <h2>____2.Unpaid Users____</h2>
     <table>
         <thead>
         <tr>
@@ -166,14 +166,14 @@
 </div><br><br><br><br>
 <div id="graph">
     <!-- Graph content here -->
-    <h2> 3.User Expiry Graph </h2>
+    <h2>____3.User Expiry Graph____</h2>
     <canvas id="expiryChart"></canvas><br><br><br><br>
     <h2> 4. User Status Pie Chart </h2>
     <canvas id="statusChart"></canvas>
 </div><br><br><br><br>
 <div id="all_users" >
     <!-- All users table -->
-    <h2> 5. All Users</h2>
+    <h2>____5. All Users____</h2>
     <table>
         <thead>
         <tr>
