--- a/login.php.html
+++ b/login.php.html
@@ -168,7 +168,7 @@
     <!-- Graph content here -->
     <h2>____3.User Expiry Graph____</h2>
     <canvas id="expiryChart"></canvas><br><br><br><br>
-    <h2> 4. User Status Pie Chart </h2>
+    <h2>____4.User Status Pie Chart____</h2>
     <canvas id="statusChart"></canvas>
 </div><br><br><br><br>
 <div id="all_users" >
