--- a/login_php.html
+++ b/login_php.html
@@ -115,7 +115,7 @@
         <div class="forgot-password">
            <button class="button1" type="button" value="Forgot Password?" onclick="showForgotPassword()"><i class="icon fas fa-key"></i> Forgot Password?</button>
         </div>
-        <p style="text-align:center; margin-top: 10px;">Don't have an account? <a href="#" onclick="showRegisterForm()">Create Account</a></p>
+        <p style="text-align:center; margin-top: 10px;">Don't have an account? <a onclick="showRegisterForm()">Create Account</a></p>
 
              <br><br>
              
