--- a/login_php.html
+++ b/login_php.html
@@ -126,6 +126,19 @@
 
 
 <script src="OFFICIAL.js"></script>
+  <script>
+      function showForgotPassword() {
+        window.location.href = "https://enockofficial.github.io/SMG-OFFICE-2024/forgot_php.html";
+    }
+
+    function showRegisterForm() {
+        window.location.href = "https://enockofficial.github.io/SMG-OFFICE-2024/registe_php.html";
+    }
+
+    function showPayment() {
+        window.location.href = "https://enockofficial.github.io/SMG-OFFICE-2024/payment_php.html";
+    }
+  </script>
 
 
 </body>
