--- a/forgot_php.html
+++ b/forgot_php.html
@@ -114,7 +114,7 @@
         <button type="button" onclick="submitForgotPassword()"><b><i class="fas fa-paper-plane"></i> Submit</b></button><br>
 
        <br><br>
-        <button class="button1" type="button" value="Back" onclick="showLoginForm()"><i class="fas fa-arrow-left"></i> Back</button> 
+        <button class="button1" type="button" value="Back" onclick="goBack()"><i class="fas fa-arrow-left"></i> Back</button> 
     </form>
 </div>
 <br><br><br><br><br><br><br><br>
