--- a/forgot_php.html
+++ b/forgot_php.html
@@ -120,6 +120,11 @@
 <br><br><br><br><br><br><br><br>
 
 <script src="OFFICIAL.js"></script>
+  <script>
+function goBack() {
+  window.history.back();
+}
+</script>
 
 </body>
 </html>
