--- a/payment_php.html
+++ b/payment_php.html
@@ -10,7 +10,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/2/27/Bus_rapid_transit_in_Dar_es_Salaam%2C_Tanzania.jpg'); /* Default background image */
+    background-image: url('https://www.topafricasafaris.com/resources/hotels/dsm-sea-view-apartments.jpg'); /* Default background image */
  background-size: cover;
   background-repeat: no-repeat;
   background-position: center; */
