--- a/payment_php.html
+++ b/payment_php.html
@@ -92,7 +92,7 @@
 </style>
 </head>
 <body>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
 
 <div class="container" id="payment-form">
   <br>
@@ -137,7 +137,7 @@
     <br>
   </form>
   <button class="button1" type="button" value="Back" onclick="goBack()"><i class="fas fa-arrow-left"></i> Back</button> 
-</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <script>
   function showLoginForm() {
