--- a/login_php.html
+++ b/login_php.html
@@ -14,6 +14,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    overflow-x: hidden;
+    background-attachment: fixed;
   }
   .container {
     max-width: 330px;
@@ -103,7 +105,7 @@
 </style>
 </head>
 <body>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
 <div class="container" id="loginForm">
     <h2 class="head">SMG OFFICE</h2>
     <form id="login">
@@ -122,7 +124,7 @@
             <button class="button2" type="button" value="Payment" onclick="showPayment()"><i class="fas fa-credit-card"></i> PAYMENT</button>
             </form>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br>
 
 
 <script src="OFFICIAL.js"></script>
