--- a/payment_php.html
+++ b/payment_php.html
@@ -13,7 +13,9 @@
     background-image: url('https://www.topafricasafaris.com/resources/hotels/dsm-sea-view-apartments.jpg'); /* Default background image */
  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; */
+  background-position: center; 
+   overflow-x: hidden;
+    background-attachment: fixed;
   }
   .container {
     max-width: 400px;
@@ -92,7 +94,7 @@
 </style>
 </head>
 <body>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
 
 <div class="container" id="payment-form">
   <br>
@@ -137,7 +139,7 @@
     <br>
   </form>
   <button class="button1" type="button" value="Back" onclick="goBack()"><i class="fas fa-arrow-left"></i> Back</button> 
-</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <script>
   function showLoginForm() {
