--- a/admin_php.html
+++ b/admin_php.html
@@ -13,6 +13,12 @@
     margin: 0;
     padding: 0;
     background-image: url('https://i.vimeocdn.com/video/1106825973-3e8aa86bdbc51df676b7f6f186e76d5f92eba7e4f19cc9d90e9778b0f5e56616-d_640x360.jpg'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    overflow-x: hidden;
+    background-attachment: fixed;
   /*  background-size: cover; */
 }
 
@@ -151,8 +157,8 @@
 <br><br><br><br><br><br><br><br><br>
 
 <div class="container1">
-	<h1><i class="fas fa-user-cog fa-4x"></i>  <br>SMG Admin Panel</h1>
-	<br><br>
+    <h1><i class="fas fa-user-cog fa-4x"></i>  <br>SMG Admin Panel</h1>
+    <br><br>
  
   <div>
     <h2><i class="fas fa-users"></i> All Users <span id="allUsersCount"></span></h2>
