--- a/forgot_php.html
+++ b/forgot_php.html
@@ -14,6 +14,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    overflow-x: hidden;
+    background-attachment: fixed;
   }
   .container {
     max-width: 330px;
@@ -117,7 +119,7 @@
         <button class="button1" type="button" value="Back" onclick="goBack()"><i class="fas fa-arrow-left"></i> Back</button> 
     </form>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br>
 
 <script src="OFFICIAL.js"></script>
   <script>
