--- a/SMGAi_php.html
+++ b/SMGAi_php.html
@@ -23,7 +23,6 @@
     height: 100vh;
     /* Hide horizontal overflow to prevent scrolling */
     overflow-x: hidden;
-    /* Ensure background attachment fixed to prevent scrolling */
     background-attachment: fixed;
 }
 
@@ -158,10 +157,10 @@ textarea {
 
 
             <div class="form-group" style="position: relative;">
-                <textarea class="form-control" id="chatgpt-response" placeholder="Response" rows="10" resize="none" readonly="true"></textarea>
+                <textarea class="form-control" id="chatgpt-response" placeholder="Response" rows="15" resize="none" readonly="true"></textarea>
                 <center> <button id="copy-btn"><i class="fas fa-copy"> </i><b>Copy</b></button>
             </div>
-            <div class="styled-response" id="styled-response"></div>
+            <div style="display: none;" class="styled-response" id="styled-response"></div>
         </div>
         <br><br><br><br><br><br><br><br>
     </div>
