--- a/profile_php.html
+++ b/profile_php.html
@@ -14,7 +14,7 @@
             margin: 0;
             background-color: #f9fafb;
 
-             background-image: url('https://media4.giphy.com/media/MFmT0MyjKpZtBdUQwH/giphy.gif'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
+             background-image: url('https://i.pinimg.com/originals/8d/df/09/8ddf0975af6063b8cf99df994cae29a3.gif'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
         }
 
         .container {
-            width: 50%;
+            width: 70%;
             max-width: 600px;
             background-color: rgba(225, 225, 225, 0.92);
             border-radius: 8px;
