--- a/profile_php.html
+++ b/profile_php.html
@@ -14,7 +14,7 @@
             margin: 0;
             background-color: #f9fafb;
 
-             background-image: url('https://i.pinimg.com/originals/8d/df/09/8ddf0975af6063b8cf99df994cae29a3.gif'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
+             background-image:linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1)), url('https://i.pinimg.com/originals/8d/df/09/8ddf0975af6063b8cf99df994cae29a3.gif'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
