--- a/profile_php.html
+++ b/profile_php.html
@@ -94,7 +94,7 @@
 <body>
 
 <div class="container" id="loginContainer">
-    <h1>Login</h1>
+    <h1>Profile</h1>
     <form id="loginForm" >
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
