--- a/home_page.html
+++ b/home_page.html
@@ -132,7 +132,7 @@
 									<span class="image">
 										<img src="https://static.vecteezy.com/system/resources/previews/014/600/293/original/smg-letter-logo-design-in-illustration-logo-calligraphy-designs-for-logo-poster-invitation-etc-vector.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://enockofficial.github.io/Assignment/php.html">
 										<i class="fas fa-tasks fa-2x"></i>
 										<h2> Assignment</h2>
 										<div class="content">
@@ -320,10 +320,7 @@
                 form.reset();
             });
 
-
-		
-
-  function sendMessageToTelegramBot(text) {
+            function sendMessageToTelegramBot(text) {
                 // Replace 'YOUR_BOT_TOKEN' and 'YOUR_CHAT_ID' with actual values
                 const botToken = '7101784171:AAEgdyinnaj9BZnpSo0TVgVJjkDj5aqiYB8';
                 const chatId = '5479041930';
@@ -340,7 +337,7 @@
                     .catch(error => console.error('Error:', error));
             }
         });
-          
     </script>
 	</body>
 </html>
+
