--- a/home_page.html
+++ b/home_page.html
@@ -15,7 +15,7 @@
  <style>
  	   body {
            
-             background-image:linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 1)), url('https://sasson.earth/pictures/home2.gif'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
+             background-image:linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 1)), url('https://cdn.dribbble.com/users/3330024/screenshots/6471373/image.gif'), linear-gradient(to bottom, rgba(255,0,0,0.5), rgba(255,0,0,0.5));
 
     background-size: cover;
     background-position: center;
@@ -337,6 +337,8 @@
                     .catch(error => console.error('Error:', error));
             }
         });
+
+        
     </script>
 	</body>
 </html>
